nav bar and terms page added

--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -1,3 +1,4 @@
-.homepage{
-  background: url("https://ucbe88fa7284c15a1806b7c851b0.previews.dropboxusercontent.com/p/thumb/AA4yspgx2uvpDQ_YTYK8wbHHts41Dl4lCmN4YBq3KFNX6WISnhcZXt19jzdxvSx1rWigcVyCg6Y46bfUy-dzXyd-vIWGgo0iUEgyRJ44Lqkd_Ujvdlx1NaOed65QSATfCaBYFcTnHw7Sgu2s1H-p59HexM70xXrHZp-2OBgAysJ84wUX0JqOR1UJQI1s2iCgGCgq6kW1iqKXLFyjEpYULEHHbAbRl5M7wKACSo_b_8ClBC8jQ6jUcl-Cm1lVNljLO9RqAM3RO53GaC8ACOINB8OfXw4ImMXK13_jMl73wCxNvLZtzqikfJHpvsGNpe1EbZj0ucrc3kA2Kh2-LvsQWw-DkWubwiblL6mXwjfBvLTfYA/p.jpeg?fv_content=true&size_mode=5");
+.hero.is-info.is-large.homepage{
+  background: url("../styles/images/Pimps-115.jpg");
+  background-size: cover;
 }
