--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,5 +1,8 @@
 @import '~bulma/bulma.sass';
 @import'home';
 @import'contactPage';
+@import'serviceList';
 
-
+.img.logopic{
+  background: url("../styles/images/banner-logopng__567x417_q85_crop_upscale.png");
+}
