--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -3,6 +3,11 @@
 @import'contactPage';
 @import'serviceList';
 
+
 .img.logopic{
   background: url("../styles/images/banner-logopng__567x417_q85_crop_upscale.png");
 }
+
+// .img.staffimages{
+
+// }
