logic for linking the stylist up with certain services

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -8,6 +8,7 @@
   background: url("../styles/images/banner-logopng__567x417_q85_crop_upscale.png");
 }
 
-// .img.staffimages{
-
-// }
+.staffimages{
+height: 20px;
+width: 20px;
+}
