--- a/frontend/src/styles/_contactPage.scss
+++ b/frontend/src/styles/_contactPage.scss
@@ -5,8 +5,8 @@ body{
 }
 //need to change to logo
 .marker{
-  background-image: url("https://pimpsandpinups.com/media/filer_public_thumbnails/filer_public/a8/99/a8996fa1-308f-4510-ab9e-c4a8ca3ad44d/banner-logopng__567x417_q85_crop_upscale.png__567x417_q85_crop_subsampling-2_upscale.png");
-  // background-color: green;
+  // background-image: url("https://pimpsandpinups.com/media/filer_public_thumbnails/filer_public/a8/99/a8996fa1-308f-4510-ab9e-c4a8ca3ad44d/banner-logopng__567x417_q85_crop_upscale.png__567x417_q85_crop_subsampling-2_upscale.png");
+  background-color: green;
   height:12px;
   width: 12px;
   border-radius:100%;
