navbar-burger added

--- a/frontend/src/styles/_serviceList.scss
+++ b/frontend/src/styles/_serviceList.scss
@@ -1,6 +1,6 @@
 .hero.is-primary.servicelistpage{
-  background: url("https://uc3ee052210775073a72bcf25eae.previews.dropboxusercontent.com/p/thumb/AA6AgYwrgYlBXR7lvrEJ77Z8E2ljteMiODmls85lkRhXYdH39Nt77vzTc_2SwSFEUcnFz4IpPohxLrdXpjg6AEtwNMWE4i0ixvVxTDsZDvslVjeZHIB0K4GCXQmUe8QIOHUjw7lpTcOENbkLA4ZgGLgMgYrzJLr-zvRyJD4H97y9fqm-63aD1q1tCunBh7Mo5ddoDgdIms3cDm6cY2EgaYdQfWTvbWiRdnPZgGt8VjTBIPLGAg9EQc_3jfO-dOm_PtSiV58JV5cWlIcItE4fC5DaFO4onvzyWApvsU3CZbgYt_FfAgo8Bb0l2Ry8FClmCdoIFFhNl9FKQmA8FYNlKDAjYAquEKx5Afn_SjueNw0VVQ/p.jpeg?size=178x178&size_mode=1");
+  // background: url("https://uc3ee052210775073a72bcf25eae.previews.dropboxusercontent.com/p/thumb/AA6AgYwrgYlBXR7lvrEJ77Z8E2ljteMiODmls85lkRhXYdH39Nt77vzTc_2SwSFEUcnFz4IpPohxLrdXpjg6AEtwNMWE4i0ixvVxTDsZDvslVjeZHIB0K4GCXQmUe8QIOHUjw7lpTcOENbkLA4ZgGLgMgYrzJLr-zvRyJD4H97y9fqm-63aD1q1tCunBh7Mo5ddoDgdIms3cDm6cY2EgaYdQfWTvbWiRdnPZgGt8VjTBIPLGAg9EQc_3jfO-dOm_PtSiV58JV5cWlIcItE4fC5DaFO4onvzyWApvsU3CZbgYt_FfAgo8Bb0l2Ry8FClmCdoIFFhNl9FKQmA8FYNlKDAjYAquEKx5Afn_SjueNw0VVQ/p.jpeg?size=178x178&size_mode=1");
 
-  background-repeat:none;
-  background-size: 30%;
+  // background-repeat:none;
+  // background-size: 30%;
 }
