added the logic to filter products in the form bar according to the hairtype

--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -1,6 +1,15 @@
-.hero.is-link.is-fullheight-with-navbar.homepage{
+body{
+background-color: black;
+}
+
+.home{
+  // display: flex;
   background: url("../styles/images/homepage.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y:15%;
+  background-position: center;
+  background-position-y: 30%;
+
 }
+
+
