added footer page and some css styling

--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -1,4 +1,4 @@
-body{
+.changecolour{
 background-color: black;
 }
 
@@ -9,7 +9,8 @@ background-color: black;
   background-repeat: no-repeat;
   background-position: center;
   background-position-y: 30%;
-
 }
 
-
+.about{
+  padding-top: 5%;
+}
