--- a/frontend/src/styles/_serviceList.scss
+++ b/frontend/src/styles/_serviceList.scss
@@ -1,11 +1,4 @@
-.is-primary{
-  height: 10%;
-  background: url("https://uce54303bf1eacc6f4d0b4ad0d9c.previews.dropboxusercontent.com/p/thumb/AA5GBlHS4UAFn3okXeOe7zysQ4MpRxXOIRlGa1a_frZqkf1u59-_kB0onpJMq2lU809xeCPuc3Wpc_TR16pDd6sFmpTTDfzzq8yztKtmFmT6lsfTv10_S-P9RnlL2AsYtW3HFyOdDJ6Z4r97E1QkaS8ij1DBKLE5zXBXDQKI2olAB4FxM_RkgGmBEIY_6ZtFcZnbZa9tm_suOO-XiKA9oP2GXpZQGLNI-KnBbXN0qCfK7di8BVhACWLBZZ01cx7e4Pt9a4-HnWp7hlgoX0AbR9XWQhptaSliOjyx34yUI2oQNQG6jREO2Gh7Y9gKo2rRxkuIYl9U0kVQ8uuKHskQ47KdZy5141Q-5rX2SrQ_n1VBTQ/p.jpeg?size=178x178&size_mode=1");
 
-  background-repeat:none;
-  background-size: contain;
-
-}
 h1{
-  font-family: 'Monoton', cursive;
+  font-family: 'Lato', sans-serif;
 }
