navigation buttons for the map added

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -40,4 +40,15 @@
   text-align: center;
 }
 
+.map{
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.buttons {
+  display: inline-flex;
+
+  background: black;
+}
 $box-radius: 6px;
