finished homepage layout

--- a/frontend/src/styles/_footer.scss
+++ b/frontend/src/styles/_footer.scss
@@ -1,5 +1,8 @@
 .notification.center.text{
   text-align: center;
   background: black;
+  color: #51fe00cf;
+  font-family: 'Righteous', cursive;
+  padding-bottom: 5%;
 }
 
