--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -12,5 +12,10 @@ background-color: black;
 }
 
 .about{
-  padding-top: 5%;
+  padding-top: 3%;
+}
+.homefont{
+  font-family: 'Balsamiq Sans', cursive;
+  color:white;
+  font-size: 18px;
 }
