--- a/frontend/src/styles/_navbar.scss
+++ b/frontend/src/styles/_navbar.scss
@@ -6,5 +6,7 @@
 
 
 .a.navbar-item.is-active{
-  background: #51fe00cf;
+  // background: #51fe00cf;
+  text-align: center;
+  background: black;
 }
