finished Homepage and service pages

--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -4,7 +4,7 @@ background-color: black;
 
 .home{
   // display: flex;
-  background: url("../styles/images/homepage.jpg");
+  background: url("../styles/images/homepage_edit_wliqge.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
