--- a/frontend/src/styles/_serviceList.scss
+++ b/frontend/src/styles/_serviceList.scss
@@ -1,51 +1,36 @@
 
-.serviceAlign{
-  display: flex;
-  padding-bottom: 5%;
-}
-.title servicetitle{
-  // display: flex;
-	justify-content: space-around;
-	flex-wrap: wrap;
-  margin-left: 5%;
+.title.servicetitle{
+  font-family: 'Balsamiq Sans', cursive;
+  color: #51fe00cf;
+  font-size: 50px;
+  // padding-bottom: -15%;
+
 }
 .serviceHeading{
   display: flex;
-  margin-top: 5%;
+
   align-content: center;
   text-align: center;
-  padding-top: 3%;
+
+  color: #51fe00cf;
+  font-family: 'Balsamiq Sans', cursive;
 
 
 }
 .serviceList{
-  padding-top: 5%;
+  padding-top: 3%;
   color: white;
   font-size: 20px;
+  font-family: 'Balsamiq Sans', cursive;
 
 }
 .pricelist{
   display: flex;
   background-image: url("https://res.cloudinary.com/do68wjft3/image/upload/v1600277410/Pimps-172_eztuic.jpg");
   // opacity: 50%;
-  background-size: 55%;
+  background-size: 50%;
   background-repeat: no-repeat;
-  background-position-y: 50%;
+  background-position-y: 60%;
   background-position-x: 80%;
   // background-blend-mode: ;
-
 }
-// .serviceimage{
-//   position: absolute;
-//   height: 100vh;
-// }
-// }
-// .serviceimage{
-//   display: flex;
-//   position: absolute;
-//   opacity: 9;
-//   height: 600px;
-//   width: 600px;
-//  justify-content: flex-end;
-
-// }
