--- a/frontend/src/styles/_productShow.scss
+++ b/frontend/src/styles/_productShow.scss
@@ -1,3 +1,24 @@
 .section.backgound{
   background: white;
 }
+.card-header-title {
+  font-family: 'Righteous', cursive;
+  font-size: 25px;
+  justify-content: center;
+}
+.card-content{
+
+  font-family: 'Balsamiq Sans', cursive;
+  font-size: 20px;
+}
+
+.productName{
+  font-family: 'Righteous', cursive;
+}
+
+.title.is-4 {
+  font-family: 'Balsamiq Sans', cursive;
+}
+.smallText{
+  font-family: 'Balsamiq Sans', cursive;
+}
