--- a/frontend/src/styles/_staffForm.scss
+++ b/frontend/src/styles/_staffForm.scss
@@ -1,6 +1,11 @@
 .select{
   padding-bottom: 3%;
+  padding-top: -20%;
 }
-.option.searchText{
-  font-family: 'Lato', sans-serif;
+.title{
+  align-items: center;
+  text-align: center;
+  font-family: 'Righteous', cursive;
+  font-size: 70px;
+  color:white;
 }
