more css styling on the cards

--- a/frontend/src/styles/_contactPage.scss
+++ b/frontend/src/styles/_contactPage.scss
@@ -21,3 +21,11 @@
 .map{
   padding-bottom: 60px;
 }
+.pimps{
+  background: url("https://res.cloudinary.com/do68wjft3/image/upload/v1600278059/Pimps-2620_yhcgwg.jpg");
+  height:60%
+}
+
+.instagram{
+  color: #51fe00cf;
+}
