instagram link added and opens in a new browser

--- a/frontend/src/styles/_contactPage.scss
+++ b/frontend/src/styles/_contactPage.scss
@@ -21,8 +21,8 @@
 .map{
   padding-bottom: 60px;
 }
-.pimps{
-  background: url("https://res.cloudinary.com/do68wjft3/image/upload/v1600278059/Pimps-2620_yhcgwg.jpg");
+.i{
+  background-image: url("https://res.cloudinary.com/do68wjft3/image/upload/v1600350372/WhatsApp_Image_2020-09-17_at_13.49.16_2_nalwsi.jpg");
   height:60%
 }
 
