--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -77,4 +77,8 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   opacity: 90%;
  }
 
+.fa-home{
+  color: white;
+}
+
 $box-radius: 6px;
