ready to deploy

--- a/frontend/src/styles/_serviceList.scss
+++ b/frontend/src/styles/_serviceList.scss
@@ -1,5 +1,5 @@
 .title.servicetitle{
-  font-family: 'Balsamiq Sans', cursive;
+  font-family: 'Righteous', cursive;
   color: #51fe00cf;
   font-size: 40px;
   padding-bottom: -10%;
@@ -9,14 +9,14 @@
   align-content: center;
   text-align: center;
   color: #51fe00cf;
-  font-family: 'Balsamiq Sans', cursive;
+  font-family: 'Righteous', cursive;
   font-size:25px;
 }
 .serviceList{
   padding-top: 3%;
   color: white;
   font-size: 20px;
-  font-family: 'Balsamiq Sans', cursive;
+  font-family: 'Righteous', cursive;
 }
 .pricelist{
   display: flex;
